push attempts at satisfying test suite
Signed-off-by: Felix Bartels <felix@host-consultants.de>

--- a/config/filter.d/kopano-webapp.conf
+++ b/config/filter.d/kopano-webapp.conf
@@ -4,7 +4,10 @@
 before = apache-common.conf
 failregex = ^%(_apache_error_client)s Kopano WebApp user: .+?(?=:): authentication failure at MAPI
 
+[Definition] 
+
 ignoreregex =
+maxlines = 1
 
 # DEV NOTES:
 #
