--- a/config/jail.conf
+++ b/config/jail.conf
@@ -418,6 +418,11 @@ logpath  = /var/log/sogo/sogo.log
 logpath  = /var/log/tine20/tine20.log
 port     = http,https
 
+[kopano-webapp]
+
+port = http,https
+filter = kopano-webapp
+logpath = /var/log/apache2/error.log
 
 #
 # Web Applications
